[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MOEXPy"
version = "2026.03.05"
description = "Библиотека-обертка, которая позволяет работать с Algopack API Московской Биржи из Python"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  {name = "Чечет Игорь Александрович"}
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = [
  "keyring>=25.7.0",
  "requests>=1.78.0",
  "websockets",
  "stomp-py"
]

[project.urls]
Homepage = "https://github.com/cia76/MOEXPy"
Repository = "https://github.com/cia76/MOEXPy"

[tool.setuptools]
packages = ["MOEXPy"]
